# nutrient-deficiency-prediction-app

./: README.md  alembic.ini  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 13166dfcd6fe_update_user_table.py  2b06d8ce96e5_added_user_table.py  2b503ee8e2a8_add_userdetails_table.py  3b3e332c2fd4_add_userdetails_table.py  5cfe370db46b_update_user_table.py  7aefff1f1ca6_add_food_log_table.py  a4ad3abc38ab_update_user_table.py  ecf429c599ad_update_user_table.py  f92dae150f32_add_food_log_table.py
src/: main.py  prediction_engine.py
src/api/v1/: debs.py  routes.py
src/api/v1/endpoints/: auth.py  diet_recommendation.py  food_log.py  user.py  user_details.py
src/config/: config.py
src/core/: config.py  db.py  security.py
src/crud/: food_log.py  user.py  user_details.py
src/ml_model/: meal_plan_pipeline.joblib
src/models/: food_log.py  user.py  user_details.py
src/tests/: test_food_log.py  test_user.py  test_user_details.py
utils/: recommendations.py
